--- a/YaBoGame/Base.lproj/Main.storyboard
+++ b/YaBoGame/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PAP-1t-4Bc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PAP-1t-4Bc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Base Navigation Controller-->
+        <!--Purely Graceful Calculate Controller-->
         <scene sceneID="J0l-MR-a1M">
             <objects>
                 <navigationController storyboardIdentifier="RootNavigationController" navigationBarHidden="YES" id="PAP-1t-4Bc" customClass="PurelyGracefulCalculateController" sceneMemberID="viewController">
@@ -24,7 +24,7 @@
             </objects>
             <point key="canvasLocation" x="-4525" y="567"/>
         </scene>
-        <!--Rare View Controller-->
+        <!--Ever Remarkable Saddle Controller-->
         <scene sceneID="oK4-fE-WwJ">
             <objects>
                 <viewController id="zAN-Uu-rXL" customClass="EverRemarkableSaddleController" sceneMemberID="viewController">
@@ -124,7 +124,7 @@
             </objects>
             <point key="canvasLocation" x="-109" y="-147"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Choose Temporary Family Controller-->
         <scene sceneID="1xa-bA-3E4">
             <objects>
                 <viewController id="v4j-O1-j6A" customClass="ChooseTemporaryFamilyController" sceneMemberID="viewController">
@@ -198,7 +198,7 @@
             </objects>
             <point key="canvasLocation" x="-1633.3333333333335" y="616.74107142857144"/>
         </scene>
-        <!--Setting View Controller-->
+        <!--Extend Date Organic Controller-->
         <scene sceneID="zMO-kZ-41A">
             <objects>
                 <viewController storyboardIdentifier="settingVC" id="Mai-kF-i4N" customClass="ExtendDateOrganicController" sceneMemberID="viewController">
@@ -309,7 +309,7 @@
             </objects>
             <point key="canvasLocation" x="720" y="522"/>
         </scene>
-        <!--Select Stage View Controller-->
+        <!--Dominate Joint Mere Controller-->
         <scene sceneID="Y7R-kT-Eml">
             <objects>
                 <viewController id="4YA-dv-u5i" customClass="DominateJointMereController" sceneMemberID="viewController">
@@ -345,7 +345,7 @@
             </objects>
             <point key="canvasLocation" x="78" y="1200"/>
         </scene>
-        <!--Prepare View Controller-->
+        <!--Sorry Envelope Controller-->
         <scene sceneID="Yjv-H9-ivH">
             <objects>
                 <viewController storyboardIdentifier="SorryEnvelopeController" id="b2f-vH-2hp" customClass="SorryEnvelopeController" sceneMemberID="viewController">
@@ -584,4 +584,3 @@
         <image name="set_ios" width="97" height="97"/>
     </resources>
 </document>
-
