--- a/GIWOTIS/PEHIVUR/Base.lproj/LaunchScreen.storyboard
+++ b/GIWOTIS/PEHIVUR/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,27 +19,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="5.png" translatesAutoresizingMaskIntoConstraints="NO" id="ErG-02-K22">
-                                <rect key="frame" x="125" y="269" width="125" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="g54-ke-kFD"/>
-                                    <constraint firstAttribute="width" constant="125" id="pNE-EK-2dm"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="ErG-02-K22">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.71825156169629623" blue="0.58891782407407411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="ErG-02-K22" firstAttribute="top" secondItem="Oem-fw-sub" secondAttribute="bottom" constant="249" id="6cN-6y-8xL"/>
-                            <constraint firstItem="ErG-02-K22" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hVT-iW-Toa"/>
+                            <constraint firstItem="nko-It-fjC" firstAttribute="top" secondItem="ErG-02-K22" secondAttribute="bottom" id="G8W-RM-0Ca"/>
+                            <constraint firstItem="ErG-02-K22" firstAttribute="top" secondItem="Oem-fw-sub" secondAttribute="bottom" id="REH-bD-W4r"/>
+                            <constraint firstAttribute="trailing" secondItem="ErG-02-K22" secondAttribute="trailing" id="dtq-Tg-gIt"/>
+                            <constraint firstItem="ErG-02-K22" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="iaE-43-FXT"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
-        <image name="5.png" width="500" height="500"/>
+        <image name="launch.png" width="1242" height="2494"/>
     </resources>
 </document>
